# pe-bear

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  SIG.txt  build.sh  build_codelite.sh  build_qt4.sh  build_qt5.sh  build_qt6.sh  macos_wrap.sh
Language/: PE-bear.ts  PE-bear_ja.ts  Readme.md
Language/ja_JP/: PELanguage.qm
Language/zh_CN/: PELanguage.qm
Language/zh_cn/: PELanguage.qm
disasm/: CMakeLists.txt  Disasm.cpp  Disasm.h  MnemType.h  PeDisasm.cpp  PeDisasm.h  bear_disasm.h
disasm/cdis/: CDisasm.cpp  CDisasm.h
disasm/udis/: UDisasm.cpp  UDisasm.h
pe-bear/: .gitignore  CMakeLists.txt  DateDisplay.cpp  DateDisplay.h  DisasmView.cpp  DisasmView.h  ExeDependentAction.cpp  ExeDependentAction.h  HexCompareView.cpp  HexCompareView.h  HexDumpModel.cpp  HexDumpModel.h  HexView.cpp  HexView.h  OffsetHeader.cpp  OffsetHeader.h  PEBear.h  PEDockedWidget.cpp  PEDockedWidget.h  PEFileTreeModel.cpp  PEFileTreeModel.h  QtCompat.h  REbear.h  REbear.rc  SectionsDiagram.cpp  SectionsDiagram.h  TempBuffer.h  ViewSettings.cpp  ViewSettings.h  application.qrc  main.cpp  pattern_tree.cpp  pattern_tree.h  rebear_res.rc  rebear_ver_short.h  resource.h  resources.h  resources.rc  win_types.h
pe-bear/base/: AIAnalyzer.cpp  AIAnalyzer.h  AISettings.cpp  AISettings.h  BearVers.cpp  BearVers.h  CollectorThread.cpp  CollectorThread.h  CommentHandler.cpp  CommentHandler.h  ImportsAutoadderSettings.h  MainSettings.cpp  MainSettings.h  Modification.cpp  Modification.h  PeHandler.cpp  PeHandler.h  PeHandlerFactory.cpp  PeHandlerFactory.h  PeHandlersManager.cpp  PeHandlersManager.h  RegKeyManager.cpp  RegKeyManager.h  Releasable.h  StringsCollection.h
pe-bear/base/threads/: CalcThread.cpp  CalcThread.h  CollectorThread.h  SignFinderThread.cpp  SignFinderThread.h  StringExtThread.cpp  StringExtThread.h  SupportedHashes.h
pe-bear/gui/: CMakeLists.txt  CommentView.cpp  CommentView.h  ContentPreview.cpp  ContentPreview.h  DarkStyle.h  DataDirWrapperSplitter.cpp  DataDirWrapperSplitter.h  DetailsTab.cpp  DetailsTab.h  DosHdrTableModel.cpp  DosHdrTableModel.h  GeneralPanel.cpp  GeneralPanel.h  HexDiffModel.cpp  HexDiffModel.h  PackersTableModel.cpp  PackersTableModel.h  PeTreeModel.cpp  PeTreeModel.h  PeWrapperModel.cpp  PeWrapperModel.h  ResourceDirSplitter.cpp  ResourceDirSplitter.h  StringsTableModel.cpp  StringsTableModel.h  TreeModel.cpp  TreeModel.h  WrapperSplitter.cpp  WrapperSplitter.h  WrapperTreeView.cpp  WrapperTreeView.h  pe_models.h
pe-bear/gui/followable_table/: FollowableOffsetedView.h  MouseTrackingTableView.h  OffsetedView.cpp  OffsetedView.h
pe-bear/gui/pe_models/: BoundImpTreeModel.cpp  BoundImpTreeModel.h  ClrHdrTreeModel.cpp  ClrHdrTreeModel.h  DebugTreeModel.cpp  DebugTreeModel.h  DelayImpTreeModel.cpp  DelayImpTreeModel.h  ExceptionTreeModel.cpp  ExceptionTreeModel.h  ExportsTreeModel.cpp  ExportsTreeModel.h  FileHdrTreeModel.cpp  FileHdrTreeModel.h  ImportsTreeModel.cpp  ImportsTreeModel.h  LdConfigTreeModel.cpp  LdConfigTreeModel.h  OptionalHdrTreeModel.cpp  OptionalHdrTreeModel.h  RelocsTreeModel.cpp  RelocsTreeModel.h  ResourcesTreeModel.cpp  ResourcesTreeModel.h  RichHdrTreeModel.cpp  RichHdrTreeModel.h  SecHdrsTreeModel.cpp  SecHdrsTreeModel.h  SecurityTreeModel.cpp  SecurityTreeModel.h  TLSTreeModel.cpp  TLSTreeModel.h
pe-bear/gui/windows/: AIAssistantWindow.cpp  AIAssistantWindow.h  AISettingsWindow.cpp  AISettingsWindow.h  DiffWindow.cpp  DiffWindow.h  ImportsAddWindow.cpp  ImportsAddWindow.h  MainWindow.cpp  MainWindow.h  OffsetsBrowseWindow.cpp  OffsetsBrowseWindow.h  PatternSearchWindow.cpp  PatternSearchWindow.h  SectionAddWindow.cpp  SectionAddWindow.h  SignaturesBrowseWindow.cpp  SignaturesBrowseWindow.h  StringsBrowseWindow.cpp  StringsBrowseWindow.h  UserConfigWindow.cpp  UserConfigWindow.h
pe-bear/gui_base/: AddressInputDialog.cpp  AddressInputDialog.h  ClipboardUtil.cpp  ClipboardUtil.h  ExtTableView.cpp  ExtTableView.h  FollowablePeTreeView.cpp  FollowablePeTreeView.h  HexInputDialog.cpp  HexInputDialog.h  HexMimeSource.cpp  HexMimeSource.h  HexSpinBox.cpp  HexSpinBox.h  OffsetDependentAction.cpp  OffsetDependentAction.h  PEViewsManager.cpp  PEViewsManager.h  PeGuiItem.cpp  PeGuiItem.h  PeTableModel.cpp  PeTableModel.h  PeTreeView.cpp  PeTreeView.h  TreeCpView.cpp  TreeCpView.h  WrapperInterface.cpp  WrapperInterface.h  WrapperTableModel.cpp  WrapperTableModel.h
sig_finder/: CMakeLists.txt  sig_finder.h  win_types.h
sig_finder/sig_finder/: PckrSign.cpp  PckrSign.h  SigFinder.cpp  SigFinder.h  SigNode.cpp  SigNode.h  SigTree.cpp  SigTree.h
xdg/: appdata.metainfo.xml.in  launcher.desktop.in
zh_CN/: PELanguage.qm
